--- a/src/sass/blocks/_main.scss
+++ b/src/sass/blocks/_main.scss
@@ -1,62 +1,58 @@
 .main {
+  padding-top: 100px;
+
   h1 {
     text-align: center;
     font-size: 50px;
     font-weight: 700;
   }
+
   &__filters {
     display: flex;
     column-gap: 20px;
     margin: 20px 0;
     justify-content: flex-start;
-
-    button {
-      padding: 5px 10px;
-      border: 1px solid #007bff;
-      border-radius: 5px;
-      background-color: transparent;
-      cursor: pointer;
-    }
-
-    button.active {
-      background-color: #007bff;
-      color: #fff;
-    }
   }
 
   form {
     display: flex;
     flex-direction: column;
     align-items: baseline;
-
-    button {
-      padding: 10px;
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: .2s all ease;
-      &:hover {
-        background-color: #0056b3;
-        transition: .3s all ease;
-      }
-    }
   }
 
   label {
     margin-bottom: 10px;
   }
 
-  input[type="text"],
-  textarea {
-    width: 500px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    outline: none;
-    &:focus {
-      border: 1px solid black;
+  &__list {
+    margin: 10px 0;
+
+    label {
+      margin-bottom: 0;
+    }
+
+    li {
+      position: relative;
+      margin-top: 20px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      align-items: center;
+      column-gap: 20px;
+      &:after {
+        content: '';
+        border-bottom: 1px solid rgba(0, 0, 0, .1);
+        margin-top: 15px;
+        display: block;
+        width: 100%;
+        border-radius: 10px;
+      }
+
+      label {
+        font-size: 16px;
+        cursor: pointer;
+      }
     }
   }
 }
