--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -14,6 +14,48 @@
     .container {
         max-width: 540px;
     }
+
+    .main {
+        h1 {
+            font-size: 45px;
+        }
+
+        &__filters {
+            margin: 30px 0 20px 0;
+        }
+
+        label {
+            margin-bottom: 20px;
+        }
+
+        input[type="text"],
+        textarea {
+            width: 500px;
+            padding: 15px 10px;
+        }
+
+        &__list {
+            li {
+            column-gap: 15px;
+                label {
+                        margin-bottom: 0;
+                }
+
+                input {
+                    width: 20px;
+                    height: 20px;
+                }
+            }
+        }
+
+        .delete-btn {
+            top: unset;
+            bottom: 12px;
+            width: 35px;
+            height: 35px;
+        }
+
+    }
 }
 
 @media (max-width: 576px) {
@@ -21,4 +63,31 @@
         width: 100%;
         padding: 0 10px;
     }
+
+    .main {
+        padding-top: 50px;
+        h1 {
+            font-size: 35px;
+        }
+
+        &__filters {
+            margin: 30px 0;
+            row-gap: 20px;
+            flex-direction: column;
+        }
+
+        button {
+            padding: 15px 10px;
+        }
+
+        input[type="text"],
+        textarea {
+            width: 300px;
+        }
+
+        form {
+            padding-bottom: 20px;
+        }
+    }
+
 }
